refactor(api-v4): delete environment + organization resources
