# gravitee-apim-rest-api/gravitee-apim-rest-api-management-v4/gravitee-apim-rest-api-management-v4-rest/src/main/java/io/gravitee/rest/api/management/v4/rest/resource/installation/EnvironmentsResource.java
@@ -1,72 +1,0 @@
-/**
- * Copyright (C) 2015 The Gravitee team (http://gravitee.io)
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *         http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-package io.gravitee.rest.api.management.v4.rest.resource.installation;
-
-import io.gravitee.common.http.MediaType;
-import io.gravitee.rest.api.management.v4.rest.mapper.EnvironmentMapper;
-import io.gravitee.rest.api.management.v4.rest.model.Environment;
-import io.gravitee.rest.api.management.v4.rest.resource.AbstractResource;
-import io.gravitee.rest.api.management.v4.rest.security.Permission;
-import io.gravitee.rest.api.management.v4.rest.security.Permissions;
-import io.gravitee.rest.api.model.permissions.RolePermission;
-import io.gravitee.rest.api.model.permissions.RolePermissionAction;
-import io.gravitee.rest.api.model.v4.api.ApiEntity;
-import io.gravitee.rest.api.model.v4.api.NewApiEntity;
-import io.gravitee.rest.api.service.EnvironmentService;
-import io.gravitee.rest.api.service.common.GraviteeContext;
-import java.util.Collection;
-import javax.inject.Inject;
-import javax.validation.Valid;
-import javax.validation.constraints.NotNull;
-import javax.ws.rs.Consumes;
-import javax.ws.rs.GET;
-import javax.ws.rs.POST;
-import javax.ws.rs.Path;
-import javax.ws.rs.PathParam;
-import javax.ws.rs.Produces;
-import javax.ws.rs.QueryParam;
-import javax.ws.rs.container.ResourceContext;
-import javax.ws.rs.core.Context;
-import javax.ws.rs.core.Response;
-
-/**
- * @author Florent CHAMFROY (florent.chamfroy at graviteesource.com)
- * @author GraviteeSource Team
- */
-@Path("/environments")
-public class EnvironmentsResource extends AbstractResource {
-
-    @Context
-    private ResourceContext resourceContext;
-
-    @Inject
-    private EnvironmentService environmentService;
-
-    @GET
-    @Produces(MediaType.APPLICATION_JSON)
-    public Collection<Environment> getEnvironments() {
-        //FIXME: get user's organization
-        String organizationId = GraviteeContext.getCurrentOrganization();
-        return EnvironmentMapper.INSTANCE.convertCollection(this.environmentService.findByOrganization(organizationId));
-    }
-
-    @Path("{envId}")
-    @GET
-    @Produces(MediaType.APPLICATION_JSON)
-    public Environment getEnvironment(@PathParam("envId") String envId) {
-        return EnvironmentMapper.INSTANCE.convert(environmentService.findById(envId));
-    }
-}
